<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onCLickSubscribe"
            type="android.view.View.OnClickListener" />
    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.subscribe.SubscribeFragment">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="412dp"
                android:layout_height="422.15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_subscribe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:scaleType="center"
                android:src="@drawable/icon"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="188.43dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="16.29dp"
            android:scaleType="centerCrop"
            android:src="@drawable/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/title_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32.5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32.5dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/title_subscribe"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/subtitle_subscribe"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/roboto_condensed_bold"
            android:onClick="@{onCLickSubscribe}"
            android:text="@string/button_subscribe"
            android:textSize="19dp"/>

    </LinearLayout>
</ScrollView>
</layout>